finishing global styles

--- a/scss/global/boilerplate.scss
+++ b/scss/global/boilerplate.scss
@@ -1,6 +1,7 @@
 html {
     font-size: 100%;
-    box-sizing: border-box;//padding and border are included in the element's total width and height, rather than being added to the dimensions.
+    box-sizing: border-box;
+    //padding and border are included in the element's total width and height, rather than being added to the dimensions.
 }
 
 *,
